# pytorch-cpp-metal-tutorial

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
my_extension/: CMakeLists.txt  cpp_extension.mm  wrapper.py
